[package]
name = "relp"
version = "0.2.3"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2021"
description = "Rust Exact Linear Programming"
repository = "https://github.com/vandenheuvel/relp"
license = "GPL-3.0-only"

keywords = ["linear", "exact", "precision", "ilp", "simplex"]
categories = ["algorithms", "science"]

exclude = ["tests"]

[dependencies]
relp-num = "0.1.10"
num-traits = "0.2.14"

itertools = "0.10.3"
fifo-set = "1.0.0"
cumsum = "1.0.0"
index-utils = { version = "2.2.0", features = ["num-traits"] }
enum-map = "2.0.0"

# TODO(PACKAGING): Make this an optional dependency.
daggy = "0.8.0"  # Currently only for debug asserts

[features]
burkardt = []
miplib = []
netlib = []
unicamp = []
cook = []

[profile.release]
lto = true
