[package]
name = "relp"
version = "0.2.5"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2021"
description = "Rust Exact Linear Programming"
repository = "https://github.com/vandenheuvel/relp"
license = "GPL-3.0-only"

keywords = ["linear", "exact", "precision", "ilp", "simplex"]
categories = ["algorithms", "science"]

exclude = ["tests"]

[dependencies]
relp-num = "0.1.12"
num-traits = "0.2.18"

itertools = "0.12.1"
fifo-set = "1.0.0"
cumsum = "1.0.0"
index-utils = { version = "2.2.3", features = ["num-traits"] }
enum-map = "2.7.2"

[features]
burkardt = []
miplib = []
netlib = []
unicamp = []
cook = []

[profile.release]
lto = true
